# Scrapy_quotes

./: README.md
scrapy_quotes/: pyproject.toml
scrapy_quotes/scrapy_quotes/: quote.csv  quotes.json  quotes.py
